--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "homepage": "https://github.com/Cosdaman/BCHW14-MVC#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.0-beta.2"
+    "sequelize": "^6.12.0-beta.3"
   }
 }
